# pgactive

./: .git-blame-ignore-revs  .gitignore  Makefile.global.in  Makefile.in  README.bdr  README.md  README.tests  bdr--2.1.0.sql  bdr.c  bdr.control  bdr.h  bdr_apply.c  bdr_catalogs.c  bdr_commandfilter.c  bdr_common.c  bdr_config_generated.h.in  bdr_conflict_handlers.c  bdr_conflict_logging.c  bdr_count.c  bdr_dbcache.c  bdr_ddlrep.c  bdr_ddlrep_deparse.c  bdr_ddlrep_truncate.c  bdr_executor.c  bdr_init_copy.c  bdr_init_replica.c  bdr_internal.h  bdr_isolationregress.conf  bdr_label.c  bdr_locks.c  bdr_locks.h  bdr_messaging.c  bdr_messaging.h  bdr_monitoring.c  bdr_nodecache.c  bdr_output.c  bdr_output_origin_filter.c  bdr_perdb.c  bdr_pgbench.sh  bdr_pgbench_check.sh  (+25 more)
bdr_toy/: Makefile  bdr_toy--1.0.sql
compat/: README.pg_dump  README.pg_resetwal
doc/: .gitignore  README.bdr  bdr-concepts.md  bdr-configuration-variables.md  bdr-design.md  bdr.sgml  bookindex.md  catalog-bdr-conflict-handlers.md  catalog-bdr-conflict-history.md  catalog-bdr-connections.md  catalog-bdr-global-locks-info.md  catalog-bdr-nodes.md  catalog-bdr-queued-drops.md  catalog-bdr-stats.md  command-bdr-init-copy.md  commands.md  conflicts-how.md  conflicts-logging.md  ddl-replication-advice.md  functions-node-mgmt.md  functions-replication-sets.md  functions.md  global-sequence-limitations.md  global-sequence-usage.md  global-sequences-orms.md  install-requirements.md  install-requirements.sgml  installation-source.md  manual-catalogs-views.sgml  manual-commands.sgml  manual-conflicts.sgml  manual-ddl-replication.sgml  manual-functions.sgml  manual-global-sequences.sgml  manual-monitoring.sgml  manual-node-management.sgml  manual-settings.sgml  monitoring-ddl-lock.md  monitoring-node-join-remove.md  monitoring-postgres-stats.md  (+21 more)
docs/: README.md  best-practives.md  guide-AlmaLinux-8.md  quickstart.md  referenceguide.md  troubleshooting.md
expected/: ddl_alter_table.out  ddl_create.out  ddl_create_1.out  ddl_enable_ddl.out  ddl_extension.out  ddl_function.out  ddl_grant.out  ddl_lock.out  ddl_mixed.out  ddl_namespace.out  ddl_replication_set.out  ddl_sequence.out  ddl_view.out  detach_bdr.out  dml_basic.out  dml_contrib.out  dml_delete_pk.out  dml_extended.out  dml_missing_pk.out  dml_replicate_ddl_command.out  dml_toasted.out  guc.out  init.out  init_bdr.out  part_bdr.out  part_bdr_1.out  (+11 more)
(+714 files in other folders)
